fixed image responsive for overflow issue.

--- a/framework/css/main.css
+++ b/framework/css/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     color: #7f7f7f;
     font-weight: 400;
 }
